--- a/public/user-signup.html
+++ b/public/user-signup.html
@@ -17,7 +17,7 @@
         <button type="submit">Sign up</button>
     </form>
 
-
+<button><a href="https://wlr.us.auth0.com/u/login?state=hKFo2SBJcVhXZFhZRWs2bk5NeGJXQk81dHlzYkJlTnVaR2d5bKFur3VuaXZlcnNhbC1sb2dpbqN0aWTZIEl2MmltVnpveWEwSGFyMWQyQ1JqTmp0c2pORUN6Q21Vo2NpZNkgMFl4UnF1Rjd4Yzl5T3h5WVNpZ1pyc2pYY3NwUmprQjY">Login</a></button>
     <script>
     </script>
 
