--- a/public/driver-list.html
+++ b/public/driver-list.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Global.css">
-    <title>User sign ups</title>
+    <title>Driver list</title>
 </head>
 <body>
 
-    <h2>User sign ups</h2>
+    <h2>Driver list</h2>
     <ul id="userList"></ul> 
         
     <script>
