--- a/public/add-driver.html
+++ b/public/add-driver.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Global.css">
-    <title>Sign up</title>
+    <title>Add driver</title>
 </head>
 <body>
-    <h2>User sign up</h2>
+    <h2>Add driver</h2>
     <form id="userForm">
-        <input type="text" id="name" placeholder="Enter Name" required>
-        <input type="text" id="lastName" placeholder="Enter Last Name" required>
-        <input type="email" id="email" placeholder="Enter Email" required>
-        <input type="tel" id="number" placeholder="Enter Phone Number" required>
-        <input type="text" id="address" placeholder="Enter Address" required>
+        <input type="text" id="driverName" placeholder="Enter Name" required>
+        <input type="text" id="driverlastName" placeholder="Enter Last Name" required>
+        <input type="email" id="driverEmail" placeholder="Enter Email" required>
+        <input type="tel" id="driverNumber" placeholder="Enter Phone Number" required>
+        <input type="text" id="driverAddress" placeholder="Enter Address" required>
         <button type="submit">Sign up</button>
     </form>
 
