--- a/public/admin.html
+++ b/public/admin.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <a href="add-products.html">add-products.html</a>
-    <a href="User-list.html">user-list.html</a>
+    <a href="auth0-users.html">user-list.html</a>
     <a href="admin.html">admin.html</a>
     <a href="product-list.html">product-list.html</a>
-    <a href="user-signup.html">user-signup.html</a>
+    <a href="login-page.html">user-signup.html</a>
 </body>
 </html>
