added product edit and search

--- a/public/admin.html
+++ b/public/admin.html
@@ -12,5 +12,7 @@
     <a href="admin.html">admin.html</a>
     <a href="product-list.html">product-list.html</a>
     <a href="login-page.html">user-signup.html</a>
+    <a href="product-list-search.html">product-list-search.html</a>
+    <a href="edit-product.html">edit-product.html</a>
 </body>
 </html>
