--- a/public/admin.html
+++ b/public/admin.html
@@ -14,5 +14,7 @@
     <a href="login-page.html">user-signup.html</a>
     <a href="product-list-search.html">product-list-search.html</a>
     <a href="edit-product.html">edit-product.html</a>
+    <a href="driver-list.html">driver-list.html</a>
+
 </body>
 </html>
