--- a/public/driver-list.html
+++ b/public/driver-list.html
@@ -1,19 +1,19 @@
-<!-- orders.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Driver List</title>
     <link rel="stylesheet" href="css/Global.css">
-    <title>Driver list</title>
 </head>
 <body>
 
-    <h2>Driver list</h2>
-    <ul id="userList"></ul> 
-        
-    <script>
-    </script>
-    <script src="Js/users-list.js"></script>
+    <h3>Number of Drivers</h3>
+    <p id="numberOfDrivers"></p>
+
+    <h3>Driver List</h3>
+    <ul id="driverList"></ul> <!-- UL to display drivers -->
+
+    <script src="Js/driver-list.js" ></script>
 </body>
 </html>
