--- a/public/product-list.html
+++ b/public/product-list.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 
+    <h3>Product Count</h3>
+<p id="productCounter">Total Products: 0</p>
+
     <h2>Products list</h2>
     <ul id="productsList"></ul> 
     
