--- a/public/add-driver.html
+++ b/public/add-driver.html
@@ -3,25 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Driver</title>
     <link rel="stylesheet" href="css/Global.css">
-    <title>Add driver</title>
 </head>
 <body>
-    <h2>Add driver</h2>
-    <form id="userForm">
-        <input type="text" id="driverName" placeholder="Enter Name" required>
-        <input type="text" id="driverlastName" placeholder="Enter Last Name" required>
-        <input type="email" id="driverEmail" placeholder="Enter Email" required>
-        <input type="tel" id="driverNumber" placeholder="Enter Phone Number" required>
-        <input type="text" id="driverAddress" placeholder="Enter Address" required>
-        <button type="submit">Sign up</button>
+    <h2>Add New Driver</h2>
+    <form id="driverForm">
+        <input type="text" id="driverName" placeholder="First Name" required>
+        <input type="text" id="driverLastName" placeholder="Last Name" required>
+        <input type="email" id="driverEmail" placeholder="Email" required>
+        <input type="text" id="driverNumber" placeholder="Phone Number" required>
+        <button type="submit">Add Driver</button>
     </form>
 
-<button><a href="https://wlr.us.auth0.com/u/login?state=hKFo2SBJcVhXZFhZRWs2bk5NeGJXQk81dHlzYkJlTnVaR2d5bKFur3VuaXZlcnNhbC1sb2dpbqN0aWTZIEl2MmltVnpveWEwSGFyMWQyQ1JqTmp0c2pORUN6Q21Vo2NpZNkgMFl4UnF1Rjd4Yzl5T3h5WVNpZ1pyc2pYY3NwUmprQjY">Login</a></button>
-    <script>
-    </script>
-
-<script src="Js/user-signup.js"></script>
   
+  <script src="Js/add-new-driver.js"></script>
+
 </body>
 </html>
