--- a/public/add-products.html
+++ b/public/add-products.html
@@ -14,8 +14,8 @@
         <input type="number" id="productPrice" placeholder="Enter Price" required>
         <input type="text" id="productCategory" placeholder="Enter Category" required>
         <input type="datetime-local" id="productAddedAt" required>
-        <!-- Change from URL to file input for product image -->
-        <input type="file" id="productImage" required>
+        <!-- Change from URL to file input for product image 
+        <input type="file" id="productImage" required>-->
         <button type="submit">Add Product</button>
     </form>
 
