--- a/public/edit-product.html
+++ b/public/edit-product.html
@@ -4,68 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Update Product</title>
+  <link rel="stylesheet" href="css/Global.css">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    .container {
-      width: 300px;
-      margin: 0 auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    input, select {
-      width: 100%;
-      padding: 8px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    .message {
-      text-align: center;
-      margin-top: 10px;
-      font-size: 14px;
-      color: green;
-    }
-    .dropdown-container {
-      position: relative;
-    }
-    .dropdown {
-      width: 100%;
-      padding: 8px;
-      margin: 10px 0;
-    }
-    .dropdown-items {
-      display: none;
-      position: absolute;
-      width: 100%;
-      border: 1px solid #ccc;
-      background-color: white;
-      max-height: 200px;
-      overflow-y: auto;
-      z-index: 1;
-    }
-    .dropdown-items div {
-      padding: 8px;
-      cursor: pointer;
-    }
-    .dropdown-items div:hover {
-      background-color: #f1f1f1;
-    }
+    
   </style>
 </head>
 <body>
