--- a/public/auth0-users.html
+++ b/public/auth0-users.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>Users List</h1>
-  <ul id="user-list">
-    <!-- Users will be dynamically inserted here -->
+  <p id="userCounter"></p>  <!-- User Counter -->
+<ul id="user-list"></ul>   <!-- User List -->
   </ul>
 
   <script>
